--- a/ar.html
+++ b/ar.html
@@ -34,7 +34,7 @@
                   <th class="plan-header plan-header-blue">
                     <div class="pricing-plan-name">أساسية</div><!-- /.pricing-plan-name -->
                     <div class="pricing-plan-price">
-                      29<span>.99</span>
+                      29<span></span>
                     </div><!-- /.pricing-plan-price -->
                     <div class="pricing-plan-period">شهري</div><!-- /.pricing-plan-period -->
                   </th><!-- /.plan-header plan-header-blue -->
@@ -44,17 +44,17 @@
                       <div class="recommended-plan-ribbon">الأكثر طلبا</div><!-- /.recommended-plan-ribbon -->
                       <div class="pricing-plan-name">مميزة</div><!-- /.pricing-plan-name -->
                       <div class="pricing-plan-price">
-                        49<span>.99</span>
+                        299<span></span>
                       </div><!-- /.pricing-plan-price -->
-                      <div class="pricing-plan-period">شهري</div><!-- /.pricing-plan-period -->
+                      <div class="pricing-plan-period">نص سنوي</div><!-- /.pricing-plan-period -->
                     </div><!-- /.header-plan-inner -->
                   </th><!-- /.plan-header plan-header-standard -->
                   <th class="plan-header plan-header-blue">
                     <div class="pricing-plan-name">بلاتينية</div><!-- /.pricing-plan-name -->
                     <div class="pricing-plan-price">
-                      99<span>.99</span>
+                      499<span></span>
                     </div><!-- /.pricing-plan-price -->
-                    <div class="pricing-plan-period">شهري</div><!-- /.pricing-plan-period -->
+                    <div class="pricing-plan-period">سنوي</div><!-- /.pricing-plan-period -->
                   </th><!-- /.plan-header plan-header-blue -->
                 </tr>
                 <tr>
@@ -80,56 +80,56 @@
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
-                  <td>مشاهدة صور الإعلان</td>
+                  <td>مشاهدة صور الإعلانات</td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
-                  <td>مشاهدة موقع الإعلان</td>
+                  <td>مشاهدة موقع الإعلانات</td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
-                  <td>الإتصال بالمعلن عن طري الرسائل</td>
+                  <td>الإتصال بالمعلن عن طري الرسائل الداخلية</td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
-                  <td>مشاهدة معلومات التواصل بالمعلن</td>
+                  <td>مشاهدة معلومات التواصل للمعلن</td>
+                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
+                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
+                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
+                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
+                </tr>
+                <tr>
+                  <td>الإطلاع على المحتوى المميز</td>
                   <td><span class="icon-no glyphicon glyphicon-remove-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
-                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
-                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
-                </tr>
-                <tr>
-                  <td>الدخول إلى المحتوي المميز</td>
-                  <td><span class="icon-no glyphicon glyphicon-remove-circle"></span></td>
-                  <td><span class="icon-no glyphicon glyphicon-remove-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
                   <td>العرض في القوائم كعضو مميز</td>
                   <td><span class="icon-no glyphicon glyphicon-remove-circle"></span></td>
-                  <td><span class="icon-no glyphicon glyphicon-remove-circle"></span></td>
+                  <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                   <td><span class="icon-yes glyphicon glyphicon-ok-circle"></span></td>
                 </tr>
                 <tr>
-                  <td>عدد الإعلانات العادية المسموح إضافتها الشهرية</td>
+                  <td>عدد الإعلانات العادية المسموح إضافتها شهرياً</td>
                   <td>غير محدود</td>
                   <td>غير محدود</td>
                   <td>غير محدود</td>
                   <td>غير محدود</td>
                 </tr>
                 <tr>
-                  <td>عدد الإعلانات المميزة المسموح إضافتها شهريا</td>
+                  <td>عدد الإعلانات المميزة المسموح إضافتها شهرياً</td>
                   <td>0</td>
                   <td>5</td>
                   <td>10</td>
@@ -144,10 +144,48 @@
                 </tr>
                 <tr>
                   <td>عدد الفيديوهات المسموح بها في الإعلان الواحد</td>
-                  <td>0</td>
                   <td>1</td>
+                  <td>2</td>
                   <td>3</td>
                   <td>5</td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td class="action-header">
+                    <a href="javascript:void(0);" class="btn btn-info">أشترك الآن</a>
+                  </td><!-- /.action-header -->
+                  <td class="action-header">
+                    <a href="javascript:void(0);" class="btn btn-info">أشترك الآن</a>
+                  </td><!-- /.action-header -->
+                  <td class="action-header">
+                    <a href="javascript:void(0);" class="btn btn-success">أشترك الآن</a>
+                  </td><!-- /.action-header -->
+                  <td class="action-header">
+                    <a href="javascript:void(0);" class="btn btn-info">أشترك الآن</a>
+                  </td><!-- /.action-header -->
+                </tr>
+                <tr>
+                  <td></td>
+                  <td>
+                    <div class="checkbox">
+                      <label for="recurring1"><input type="checkbox" id="recurring1" /> تجديد تلقائي</label>
+                    </div><!-- /.checkbox -->
+                  </td>
+                  <td>
+                    <div class="checkbox">
+                      <label for="recurring2"><input type="checkbox" id="recurring2"  /> تجديد تلقائي</label>
+                    </div><!-- /.checkbox -->
+                  </td>
+                  <td>
+                    <div class="checkbox">
+                      <label for="recurring3"><input type="checkbox" id="recurring3"  /> تجديد تلقائي</label>
+                    </div><!-- /.checkbox -->
+                  </td>
+                  <td>
+                    <div class="checkbox">
+                      <label for="recurring4"><input type="checkbox" id="recurring4"  /> تجديد تلقائي</label>
+                    </div><!-- /.checkbox -->
+                  </td>
                 </tr>
               </tbody>
             </table>
