--- a/ar.html
+++ b/ar.html
@@ -27,14 +27,14 @@
                   <th class="plan-header plan-header-free">
                     <div class="pricing-plan-name">مجانية</div><!-- /.pricing-plan-name -->
                     <div class="pricing-plan-price">
-                      0<span>.00</span>
+                      <sup><!-- $ --></sup>0<span><!-- .00 --></span>
                     </div><!-- /.pricing-plan-price -->
                     <div class="pricing-plan-period">مدى الحياة</div><!-- /.pricing-plan-period -->
                   </th><!-- /.plan-header plan-header-free -->
                   <th class="plan-header plan-header-blue">
                     <div class="pricing-plan-name">أساسية</div><!-- /.pricing-plan-name -->
                     <div class="pricing-plan-price">
-                      29<span></span>
+                      <sup><!-- $ --></sup>29<span><!-- .00 --></span>
                     </div><!-- /.pricing-plan-price -->
                     <div class="pricing-plan-period">شهري</div><!-- /.pricing-plan-period -->
                   </th><!-- /.plan-header plan-header-blue -->
@@ -44,7 +44,7 @@
                       <div class="recommended-plan-ribbon">الأكثر طلبا</div><!-- /.recommended-plan-ribbon -->
                       <div class="pricing-plan-name">مميزة</div><!-- /.pricing-plan-name -->
                       <div class="pricing-plan-price">
-                        299<span></span>
+                        <sup><!-- $ --></sup>299<span><!-- .00 --></span>
                       </div><!-- /.pricing-plan-price -->
                       <div class="pricing-plan-period">نص سنوي</div><!-- /.pricing-plan-period -->
                     </div><!-- /.header-plan-inner -->
@@ -52,7 +52,7 @@
                   <th class="plan-header plan-header-blue">
                     <div class="pricing-plan-name">بلاتينية</div><!-- /.pricing-plan-name -->
                     <div class="pricing-plan-price">
-                      499<span></span>
+                      <sup><!-- $ --></sup>499<span><!-- .00 --></span>
                     </div><!-- /.pricing-plan-price -->
                     <div class="pricing-plan-period">سنوي</div><!-- /.pricing-plan-period -->
                   </th><!-- /.plan-header plan-header-blue -->
